--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ javacc {
             jjtree {
                     nodePackage = 'org.ic4j.candid.parser.idl.value'
                 }
-		  }
+        }
            type {
             inputFile = file('src/main/java/org/ic4j/candid/parser/idl/type/IDLTypeGrammar.jjt')
             outputDir = file('src/main/java')
@@ -76,20 +76,20 @@ jar {
     }
 
     tasks.named('jar').configure {
-        excludes = ['org/ic4j/candid/dom/**',
-                    'org/ic4j/candid/jackson/**',
-                    'org/ic4j/candid/jaxb/**',
-                    'org/ic4j/candid/jdbc/**']
+//        excludes = ['org/ic4j/candid/dom/**',
+//                    'org/ic4j/candid/jackson/**',
+//                    'org/ic4j/candid/jaxb/**',
+//                    'org/ic4j/candid/jdbc/**']
         duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     }
 }
 
 
-    test {
-        useJUnitPlatform()
-    }
+test {
+    useJUnitPlatform()
+}
 
-dependencies {	
+dependencies {
 	// https://mvnrepository.com/artifact/org.slf4j/slf4j-api
 	compileOnly group: 'org.slf4j', name: 'slf4j-api', version: '2.0.16'
 
@@ -107,7 +107,7 @@ dependencies {
 
 	// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
 	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.17.2'
-	
+
 	// https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
 	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.11.0'
 
@@ -125,7 +125,7 @@ dependencies {
 
 	// https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-impl
 	testImplementation group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '3.0.2'
-	
+
 	// https://mvnrepository.com/artifact/com.google.code.gson/gson
 	testImplementation group: 'com.google.code.gson', name: 'gson', version: '2.11.0'
 
@@ -140,3 +140,4 @@ dependencies {
 
 	testImplementation group: 'com.prowidesoftware', name: 'pw-iso20022', version: 'SRU2023-9.4.4'
 }
+
